# thesis

./: pyproject.toml  requirements.txt
code/: Conley_Poisson.R  Fixest.R  IV play.ipynb  Poisson.R  conflict.ipynb
