[tool.poetry]
name = "thesis-prj"
version = "0.1.0"
description = "Replication for thesis"
authors = ["Gleb Trokhov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
geopandas = "^0.14.0"
matplotlib = "^3.8.0"
rasterio = "^1.3.8.post2"
statsmodels = "^0.14.0"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
pyarrow = "^13.0.0"
numpy = "^1.26.1"
ipywidgets = "^8.1.1"
networkx = "^3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
